Included googlefont link line

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/media_query.css">
+
+    <!--
+        - google font link
+    -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900">
 </head>
 <body>
     
