Added main container div element in HTML's body

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900">
 </head>
 <body>
-    
+    <!--
+        - main container
+    -->
+    <div class="container">
+
+        
+    </div>
 </body>
 </html>
