Added header element in container class

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
     -->
     <div class="container">
 
-        
+        <!--
+            #HEADER SECTION
+        -->
+
+        <header class="">
+            
+        </header>
     </div>
 </body>
 </html>
