--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
         -->
 
         <header class="">
-            
+            <div class="navbar">
+
+                <!--
+                    - menu button for small screen
+                -->
+                <button class="navbar-menu-btn">
+                    <span class="one"></span>
+                    <span class="two"></span>
+                    <span class="three"></span>
+                </button>
+            </div>
         </header>
     </div>
 </body>
