added navbar-brand <a> element in .navbar class

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                     <span class="two"></span>
                     <span class="three"></span>
                 </button>
+
+                <a href="#" class="navbar-brand">
+                    <img src="./assets/images/logo.png" alt="">
+                </a>
             </div>
         </header>
     </div>
