--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
                 <a href="#" class="navbar-brand">
                     <img src="./assets/images/logo.png" alt="">
                 </a>
+
+                <!--
+                    - navbar navigation
+                -->
+
+                <nav class="">
+                    <ul class="navbar-nav">
+                        <li> <a href="#" class="navbar-link">Home</a></li>
+                        <li> <a href="#category" class="navbar-link">Category</a> </li>
+                        <li> <a href="#live" class="navbar-link">LIVE</a> </li>
+                    </ul> 
+                </nav>
             </div>
         </header>
     </div>
