--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
                         <li> <a href="#live" class="navbar-link">LIVE</a> </li>
                     </ul> 
                 </nav>
+
+                <!--
+                    - search and sign-in
+                -->
+
+                <div class="navbar-actions">
+
+                    <form action="#" class="navbar-form">
+                        <input type="text" name="search" placeholder="I'm looking for..." class="navbar-form-search">
+
+                        <button class="navbar-form-btn">
+                            <ion-icon name="search-outline"></ion-icon>
+                        </button>
+
+                        <button class="navbar-form-close">
+                            <ion-icon name=""close-circle-outline></ion-icon>
+                        </button>
+                    </form>
+                    
+                </div>
             </div>
         </header>
     </div>
