Add search button and signin bar for small screen

--- a/index.html
+++ b/index.html
@@ -74,7 +74,20 @@
                             <ion-icon name=""close-circle-outline></ion-icon>
                         </button>
                     </form>
-                    
+
+
+                    <!--
+                        - search button for small screen
+                    -->
+
+                    <button class="navbar-search-btn">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </button>
+
+                    <a href="#" class="navbar-signin">
+                        <span>Sign in</span>
+                        <ion-icon name="log-in-outline"></ion-icon>
+                    </a>
                 </div>
             </div>
         </header>
