Added <main> in the <div class="container">

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                 </div>
             </div>
         </header>
+
+
+        <!--
+            - MAIN SECTION
+        -->
+        <main>
+            
+        </main>
     </div>
 </body>
 </html>
