--- a/index.html
+++ b/index.html
@@ -210,6 +210,36 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <div class="movie-card">
+                        <div class="card-head">
+                            <img src="./assets/images/movies/spider-men.jpg" alt="" class="card-img">
+
+                            <div class="card-overlay">
+                                <div class="bookmark">
+                                    <ion-icon name="bookmark-outline"></ion-icon>
+                                </div>
+
+                                <div class="rating">
+                                    <ion-icon name="star-outline"></ion-icon>
+                                    <span>7.4</span>
+                                </div>
+
+                                <div class="play">
+                                    <ion-icon name="play-circle-outline"></ion-icon>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body">
+                            <h3 class="card-title">Spieder-Man: Homecoming</h3>
+
+                            <div class="card-info">
+                                <span class="genere">Action/Adventure</span>
+                                <span class="year">2017</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
