Added the matrix card

--- a/index.html
+++ b/index.html
@@ -240,6 +240,37 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="movie-card">
+                        <div class="card-head">
+                            <img src="./assets/images/movies/matrix.jpg" alt="" class="card-img">
+
+                            <div class="card-overlay">
+                                <div class="bookmark">
+                                    <ion-icon name="bookmark-outline"></ion-icon>
+                                </div>
+
+                                <div class="rating">
+                                    <ion-icon name="star-outline"></ion-icon>
+                                    <span>N/A</span>
+                                </div>
+
+                                <div class="play">
+                                    <ion-icon name="play-circle-outline"></ion-icon>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body">
+                            <h3 class="card-title">The Matrix Resurrections</h3>
+
+                            <div class="card-info">
+                                <span class="genere">Sci-fi/Action</span>
+                                <span class="year">2021</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </main>
