--- a/index.html
+++ b/index.html
@@ -361,6 +361,37 @@
                         </div>
                     </div>
 
+                    <div class="movie-card">
+                        <div class="card-head">
+                            <img src="./assets/images/movies/shang-chi.jpg" alt="" class="card-img">
+
+                            <div class="card-overlay">
+                                <div class="bookmark">
+                                    <ion-icon name="bookmark-outline"></ion-icon>
+                                </div>
+
+                                <div class="rating">
+                                    <ion-icon name="star-outline"></ion-icon>
+                                    <span>7.6</span>
+                                </div>
+
+                                <div class="play">
+                                    <ion-icon name="play-circle-outline"></ion-icon>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body">
+                            <h3 class="card-title">Shang-Chi and The Legend of The Ten Rings</h3>
+
+                            <div class="card-info">
+                                <span class="genere">Action/Fantasy</span>
+                                <span class="year">2021</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    
                 </div>
             </section>
         </main>
