Added Dark Knight's movie card.

--- a/index.html
+++ b/index.html
@@ -421,6 +421,38 @@
                         </div>
                     </div>
 
+                    <div class="movie-card">
+                        <div class="card-head">
+                            <img src="./assets/images/movies/dark-knight.jpg" alt="" class="card-img">
+
+                            <div class="card-overlay">
+                                <div class="bookmark">
+                                    <ion-icon name="bookmark-outline"></ion-icon>
+                                </div>
+
+                                <div class="rating">
+                                    <ion-icon name="star-outline"></ion-icon>
+                                    <span>9.0</span>
+                                </div>
+
+                                <div class="play">
+                                    <ion-icon name="play-circle-outline"></ion-icon>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body">
+                            <h3 class="card-title">The Dark Knight</h3>
+
+                            <div class="card-info">
+                                <span class="genere">Action/Adventure</span>
+                                <span class="year">2008</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+
                 </div>
             </section>
         </main>
