--- a/index.html
+++ b/index.html
@@ -511,6 +511,36 @@
                         </div>
                     </div>
 
+                    <div class="movie-card">
+                        <div class="card-head">
+                            <img src="./assets/images/movies/LOTR.jpg" alt="" class="card-img">
+
+                            <div class="card-overlay">
+                                <div class="bookmark">
+                                    <ion-icon name="bookmark-outline"></ion-icon>
+                                </div>
+
+                                <div class="rating">
+                                    <ion-icon name="star-outline"></ion-icon>
+                                    <span>8.9</span>
+                                </div>
+
+                                <div class="play">
+                                    <ion-icon name="play-circle-outline"></ion-icon>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body">
+                            <h3 class="card-title">lord Of The Rings: Return Of The King</h3>
+
+                            <div class="card-info">
+                                <span class="genere">Fantasy/Adventure</span>
+                                <span class="year">2003</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </main>
