Added load more button in the movies section

--- a/index.html
+++ b/index.html
@@ -720,8 +720,12 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
+
+                <!--
+                    - load more button
+                -->
+                <button class="load-more">LOAD MORE</button>
             </section>
         </main>
     </div>
