Added category section

--- a/index.html
+++ b/index.html
@@ -727,6 +727,20 @@
                 -->
                 <button class="load-more">LOAD MORE</button>
             </section>
+
+
+            <!--
+                - CATEGORY SECTION
+            -->
+            <section class="category" id="category">
+
+                <h2 class="section-heading">Category</h2>
+
+                <div class="category-grid">
+                    
+                </div>
+
+            </section>
         </main>
     </div>
 </body>
