Added Action category

--- a/index.html
+++ b/index.html
@@ -737,7 +737,12 @@
                 <h2 class="section-heading">Category</h2>
 
                 <div class="category-grid">
-                    
+
+                    <div class="category-grid">
+                        <img src="./assets/images/action.jpg" alt="" class="class-img">
+                        <div class="name">Action</div>
+                        <div class="total">100</div>
+                    </div>
                 </div>
 
             </section>
