--- a/index.html
+++ b/index.html
@@ -738,13 +738,19 @@
 
                 <div class="category-grid">
 
-                    <div class="category-grid">
+                    <div class="category-card">
                         <img src="./assets/images/action.jpg" alt="" class="class-img">
                         <div class="name">Action</div>
                         <div class="total">100</div>
                     </div>
-                </div>
 
+                    <div class="category-card">
+                        <img src="./assets/images/comedy.jpg" alt="" class="class-img">
+                        <div class="name">Comedy</div>
+                        <div class="total">50</div>
+                    </div>
+
+                </div>
             </section>
         </main>
     </div>
