Added thriller category card

--- a/index.html
+++ b/index.html
@@ -750,6 +750,12 @@
                         <div class="total">50</div>
                     </div>
 
+                    <div class="category-card">
+                        <img src="./assets/images/thriller.webp" alt="" class="class-img">
+                        <div class="name">Thriller</div>
+                        <div class="total">20</div>
+                    </div>
+
                 </div>
             </section>
         </main>
