Added horror category card

--- a/index.html
+++ b/index.html
@@ -756,6 +756,12 @@
                         <div class="total">20</div>
                     </div>
 
+                    <div class="category-card">
+                        <img src="./assets/images/horror.jpg" alt="" class="class-img">
+                        <div class="name">Horror</div>
+                        <div class="total">80</div>
+                    </div>
+
                 </div>
             </section>
         </main>
