Added adventure category card

--- a/index.html
+++ b/index.html
@@ -762,6 +762,12 @@
                         <div class="total">80</div>
                     </div>
 
+                    <div class="category-card">
+                        <img src="./assets/images/adventure.jpg" alt="" class="class-img">
+                        <div class="name">Adventure</div>
+                        <div class="total">50</div>
+                    </div>
+
                 </div>
             </section>
         </main>
