Added animated category card

--- a/index.html
+++ b/index.html
@@ -768,6 +768,12 @@
                         <div class="total">50</div>
                     </div>
 
+                    <div class="category-card">
+                        <img src="./assets/images/animated.jpg" alt="" class="class-img">
+                        <div class="name">Animated</div>
+                        <div class="total">50</div>
+                    </div>
+
                 </div>
             </section>
         </main>
