Added crime category card

--- a/index.html
+++ b/index.html
@@ -774,6 +774,12 @@
                         <div class="total">50</div>
                     </div>
 
+                    <div class="category-card">
+                        <img src="./assets/images/crime.jpg" alt="" class="class-img">
+                        <div class="name">Crime</div>
+                        <div class="total">20</div>
+                    </div>
+
                 </div>
             </section>
         </main>
