Added SCI-FI category card

--- a/index.html
+++ b/index.html
@@ -780,6 +780,12 @@
                         <div class="total">20</div>
                     </div>
 
+                    <div class="category-card">
+                        <img src="./assets/images/sci-fi.jpg" alt="" class="class-img">
+                        <div class="name">SCI-FI</div>
+                        <div class="total">80</div>
+                    </div>
+
                 </div>
             </section>
         </main>
