--- a/index.html
+++ b/index.html
@@ -795,6 +795,15 @@
                 <h2 class="section-heading">Live Tv Shows</h2>
 
                 <div class="live-grid">
+                    <div class="live-card">
+                        <img src="./assets/images/planet.jpg" alt="" class="card-img">
+                        <div class="live-badge">LIVE</div>
+                        <div class="total-viewers">305K viewers</div>
+                        <div class="play">
+                            <ion-icon name="play-circle-outline"></ion-icon>
+                        </div>
+                    </div>
+
                     
                 </div>
             </section>
