Added GOT's LIVE card

--- a/index.html
+++ b/index.html
@@ -804,8 +804,28 @@
                         </div>
                     </div>
 
-                    
+                    <div class="body">
+                        <img src="./assets/images/bbcamerica.jpg" alt="" class="avatar">
+                        <h3 class="card-title">Planet Earth II <br> Season 1 - Islands</h3>
+                    </div>
                 </div>
+
+                <div class="live-grid">
+                    <div class="live-card">
+                        <img src="./assets/images/got.jpg" alt="" class="card-img">
+                        <div class="live-badge">LIVE</div>
+                        <div class="total-viewers">1.7M viewers</div>
+                        <div class="play">
+                            <ion-icon name="play-circle-outline"></ion-icon>
+                        </div>
+                    </div>
+
+                    <div class="body">
+                        <img src="./assets/images/HBO-Logo-square.jpg" alt="" class="avatar">
+                        <h3 class="card-title">Game of Thrones <br> Season 5 - Mother's Mercy</h3>
+                    </div>
+                </div>
+
             </section>
         </main>
     </div>
