--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
     <!--
         - custom js link
     -->
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/script.js"></script>
     
     <!--
         - ionicon link
