Change copyright value to cineMa

--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
 
                 <div class="footer-brand">
                     <img src="./assets/images/logo.png" alt="" class="footer-logo">
-                    <p class="slogan">Movies & TV Shows, Online cinema,Movie database HTML Template. </p>
+                    <p class="slogan">Movies & TV Shows, Online cinema, Movie database HTML Template. </p>
 
                     <div class="social-link">
                         <a href="#">
@@ -917,7 +917,7 @@
             </div>
                 <div class="footer-copyright">
                     <div class="copyright">
-                        <p>&copy; copyright 2022 CineFlix</p>
+                        <p>&copy; copyright 2022 CineMa</p>
                     </div>
 
                     <div class="wrapper">
