--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
 
                 <div class="footer-links">
                     <ul>
-                        <h4 class="link-heading">CineFlix</h4>
+                        <h4 class="link-heading">CineMa</h4>
 
                         <li class="link-item"><a href="#">About us</a></li>
                         <li class="link-item"><a href="#">My profile</a></li>
