Made some changes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900">
 </head>
 <body>
+    <script src="./assets/js/api.js"></script>
     <!--
         - main container
     -->
