--- a/index.html
+++ b/index.html
@@ -927,11 +927,13 @@
         - custom js link
     -->
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/helper.js"></script>
+    <script src="./assets/js/api.js"></script>
+    
     
     <!--
         - ionicon link
     -->
-    <script src="./assets/js/api.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
